# fbot

./: .dir-locals.el  .gitignore  .rustfmt.toml  Cargo.toml  README  fbot.dhall  fbot.service  fbot.toml  liesmich.org  update_fbotdb.py
.github/workflows/: build.yml  ci.yml
botpackage/: carp.py  hannah.py  rita.py
meta/: PKGBUILD  update.sh
migrations/2021-05-03-234303_create_sing/: down.sql  up.sql
rust/: Cargo.toml  fbot.toml  fbot_r.toml
rust/src/: abstractBot.rs  caro.rs  channel_handler.rs  config.rs  main.rs  parser.rs
src/: bots.rs  config.rs  instant_waiter.rs  main.rs  models.rs  schema.rs  string_storage.rs
src/bots/: freiepunkte.rs  mod.rs  nickname.rs  ping.rs  ping_readfromdb.rs  ping_sendtodb.rs  ritabot.rs  util.rs
src/bots/ritabot/: dual_error.rs  mod.rs  sing.rs  ud.rs
src/bots/rubenbot/: mod.rs  stated_url.rs  wikipedia.rs  youtube.rs
src/lib/: instant_waiter.rs  mod.rs  youtube.rs  youtube_dl.rs
