[package]
name = "rusty_rita"
version = "1.0.0"
edition = "2018"


[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"
qedchat = { git = "https://git.amesgen.de/amesgen/qedchat-rs.git", rev = "1dbdedfbc7" }
anyhow = "1"
log = "0.4"
env_logger = "0.8"
clap = "3.0.0-beta.2"
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
nom = "6"
itertools = "0.10"
serde_dhall = { version = "0.9", default-features = false }
url = "2"
regex = "1"
rustyline = "7"


[profile.release]
lto = "fat"
