[package]
name = "rusty_rita"
version = "1.0.0"
edition = "2018"


[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"
qedchat = { git = "https://git.amesgen.de/amesgen/qedchat-rs.git", rev = "ff679ce1f6" }
anyhow = "1"
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
chrono = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
nom = "5"
itertools = "0.9"
serde_dhall = "0.10"
url = "2"
regex = "1"
rustyline = "6"
urlencoding = "1.1.1"
reqwest = "0.11.2"
serde_json = "1.0.64"
youtube_dl = "0.6.1"


[profile.release]
lto = "fat"
