[package]
name = "rusty_rita"
version = "1.0.0"
edition = "2018"


[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"
qedchat = { git = "https://git.amesgen.de/amesgen/qedchat-rs.git", rev = "484d8a6e65" }
anyhow = "1"
log = "0.4"
env_logger = "0.8"
clap = "3.0.0-beta"
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
nom = "6"
itertools = "0.10"
serde_dhall = "0.10"
url = "2"
regex = "1"
rustyline = "8"
urlencoding = "1"
reqwest = "0.11"
serde_json = "1.0"
ratelimit_meter = "5.0.0"
thiserror = "1.0"
sha-1 = "0.9"
generic-array = "0.14"
diesel = {version = "1.4", features = ["chrono", "postgres"]}
impl-enum = "0.2.0"


[profile.release]
lto = "fat"
